--- a/public/index.html
+++ b/public/index.html
@@ -891,6 +891,7 @@ transform: scale(1, 1)">
 <script src="js/prism.js"></script>
 <script src="js/hammer.min.js"></script>
 <script src="/js/impress.js"></script>
+<script src="js/mobile-ui.js"></script>
 
 <script>
 impress().init();
